experiments/components/components/apps/_template/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  labels:
    app: APP_NAME
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: APP_NAME
